--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@apollo/client": "^3.7.3",
     "@lens-protocol/react-native-lens-ui-kit": "^0.1.12",
     "@livepeer/react": "^1.5.6",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@xmtp/xmtp-js": "^7.7.2",
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
+    "json-rpc-engine": "^6.1.0",
     "next-images": "^1.8.4",
     "next-link": "^2.0.0",
     "react": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-iframe": "^1.8.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "wagmi": "^0.9.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
